# aicso

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  build.sh  config.yaml  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt  start_web.py
docs/: PRD.md  TECHNICAL_DESIGN.md  WHITEPAPER.md
playbooks/: brute-force.yaml  malware.yaml  phishing.yaml
scripts/: init_db.py  install_offline.bat  install_offline.py  install_offline.sh  pack_offline.bat  pack_offline.py  pack_offline.sh  seed_data.py
skills/phishing-response/: skill.yaml
src/aicso/: __init__.py  __main__.py  config.py  logging.py
src/aicso/adapters/: __init__.py  base.py  kafka.py  mock_producer.py  registry.py  rest_api.py
src/aicso/agents/: __init__.py  base.py  intel.py  investigation.py  report.py  response.py  triage.py
src/aicso/aggregator/: __init__.py  engine.py
src/aicso/api/: __init__.py  app.py  deps.py
src/aicso/cli/: __init__.py  agent.py  alert.py  case.py  datasource.py
src/aicso/core/: __init__.py  approval.py  context.py  datasource_manager.py  event_bus.py  orchestrator.py
src/aicso/models/: __init__.py  alert.py  asset.py  case.py  ioc.py  playbook.py
src/aicso/playbook/: __init__.py  executor.py  parser.py
src/aicso/security/: __init__.py
tests/: __init__.py  test_logging.py  test_mock_inject.py
tests/integration/: __init__.py  test_e2e.py
tests/unit/: __init__.py  test_aggregator.py  test_approval.py  test_event_bus.py  test_models.py  test_orchestrator.py  test_playbook.py  test_store.py  test_triage.py
(+26 files in other folders)
