[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicso"
version = "0.1.0"
description = "AI Cyber Security Operations - 以Case为中心的AI-Native安全运营Agent框架"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AiCSO Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.60.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "structlog>=24.0.0",
    "python-ulid>=2.0.0",
    "mcp>=1.0.0",
    "aiokafka>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
aicso = "aicso.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aicso"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
